--- a/ng4-complete-guide/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/ng4-complete-guide/src/app/recipes/recipes-list/recipes-list.component.html
@@ -6,7 +6,7 @@
 <hr>
 <div class="row">
   <div class="col-xs-12">
-    <app-recipes-item *ngFor="let rec of recipes" [recipe]="rec"></app-recipes-item>
+    <app-recipes-item *ngFor="let recEl of recipes" [recipe]="recEl"></app-recipes-item>
   </div>
 </div>
 
