--- a/ng4-complete-guide/src/app/recipes/recipes.component.html
+++ b/ng4-complete-guide/src/app/recipes/recipes.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="col-md-7">
-    <app-recipes-detail *ngIf="selctedRecipe; else infoText" [recipe]="selctedRecipe"></app-recipes-detail>
+    <app-recipes-detail *ngIf="selectedRecipe; else infoText" [recipe]="selectedRecipe"></app-recipes-detail>
     <ng-template #infoText>
       <p>Please select a Recipe!</p>
     </ng-template>
