--- a/form-practice/src/app/app.component.html
+++ b/form-practice/src/app/app.component.html
@@ -2,7 +2,10 @@
   <div class="row">
     <div class="col-xs-12 col-sm-10 col-md-8 col-sm-offset-1 col-md-offset-2">
       <form (ngSubmit) = "onSubmit(f)" #f="ngForm">
-        <div id="user-data">
+        <div
+          id="user-data"
+          ngModelGroup="userData"
+          #userDataGroup = "ngModelGroup">
           <div class="form-group">
             <label for="username">Username</label>
             <input
@@ -28,6 +31,7 @@
             <span class="help-block" *ngIf="!ema.valid && ema.touched">Please enter a valid email!</span>
           </div>
         </div>
+        <span *ngIf="!userDataGroup.valid && userDataGroup.touched">User data is invalid</span>
         <div class="form-group">
           <label for="secret">Secret Questions</label>
           <select
@@ -38,6 +42,25 @@
             <option value="pet">Your first Pet?</option>
             <option value="teacher">Your first teacher?</option>
           </select>
+        </div>
+        <div class="form-group">
+          <textarea
+            name="questionAnswer"
+            rows="3"
+            class="form-control"
+            [(ngModel)]="answer"></textarea>
+        </div>
+        <p>Your reply: {{answer}}</p>
+        <div class="radio" *ngFor="let gender of genders">
+          <label>
+            <input
+              type="radio"
+              name="gender"
+              ngModel
+              [value]="gender"
+              required>
+            {{gender}}
+          </label>
         </div>
         <button
           class="btn btn-primary"
