--- a/form-practice/src/app/app.component.html
+++ b/form-practice/src/app/app.component.html
@@ -13,10 +13,13 @@
               id="username"
               class="form-control"
               ngModel
-              name="usernamemodel"
+              name="username"
               required>
           </div>
-          <button class="btn btn-default" type="button">Suggest an Username</button>
+          <button
+            class="btn btn-default"
+            type="button"
+            (click)="suggestUserName()">Suggest an Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
             <input
@@ -24,7 +27,7 @@
               id="email"
               class="form-control"
               ngModel
-              name="emailmodel"
+              name="email"
               required
               email
               #ema="ngModel">
@@ -38,7 +41,7 @@
             id="secret"
             class="form-control"
             [ngModel]="defaultQuestion"
-            name="secretmodel">
+            name="secret">
             <option value="pet">Your first Pet?</option>
             <option value="teacher">Your first teacher?</option>
           </select>
@@ -67,6 +70,18 @@
           type="submit"
           [disabled]="!f.valid">Submit</button>
       </form>
+      <hr>
+
+    </div>
+  </div>
+  <div class="row" *ngIf="submitted">
+    <div class="col-xs-12">
+      <h3>Your data</h3>
+      <p>Username: {{user.username}} </p>
+      <p>Mail: {{user.email}} </p>
+      <p>Secret Question: Your first question was {{user.secretQuestion}} </p>
+      <p>Answer: {{user.answer}} </p>
+      <p>Gender: {{user.gender}} </p>
     </div>
   </div>
 </div>
