--- a/form-practice/src/app/app.component.html
+++ b/form-practice/src/app/app.component.html
@@ -17,9 +17,9 @@
               required>
           </div>
           <button
-            class="btn btn-default"
+            class="btn btn-info"
             type="button"
-            (click)="suggestUserName()">Suggest an Username</button>
+            (click)="suggestUserName()">Suggested Username</button>
           <div class="form-group">
             <label for="email">Mail</label>
             <input
