--- a/reactive-approach-form/src/app/app.component.html
+++ b/reactive-approach-form/src/app/app.component.html
@@ -14,7 +14,10 @@
             class="form-control">
           <span
             class="help-block"
-            *ngIf="!signupForm.get('userData.username').valid && signupForm.get('userData.username').touched">Please enter a valid username!</span>
+            *ngIf="!signupForm.get('userData.username').valid && signupForm.get('userData.username').touched">
+            <span *ngIf="signupForm.get('userData.username').errors['nameIsForbidden']">This name is invalid</span>
+            <span *ngIf="signupForm.get('userData.username').errors['required']">This name is required</span>
+            </span>
         </div>
         <div class="form-group">
           <label for="email">email</label>
