--- a/AdvanceAngularConcept/src/app/cockpit/cockpit.component.html
+++ b/AdvanceAngularConcept/src/app/cockpit/cockpit.component.html
@@ -1,8 +1,7 @@
 <div class="row">
   <div class="col-xs-12">
-    <p>Add new Servers or blueprints</p>
+    <p>Add new Servers type, Server Name or blueprints</p>
     <label>Server Name</label>
-
     <input type="text" class="form-control" #serverNameInput>
     <label>Server Content</label>
     <input type="text" class="form-control" #serverContentInput>
