--- a/AdvanceAngularConcept/src/app/app.component.html
+++ b/AdvanceAngularConcept/src/app/app.component.html
@@ -14,7 +14,9 @@
         [srvElement]="serverElement"
         [name]="serverElement.name">
         <p #contentParagraph>
-          <strong *ngIf="serverElement.type === 'server'" style="color: red">{{ serverElement.content }}</strong>
+          <strong
+            *ngIf="serverElement.type === 'server'"
+            style="color: red">{{ serverElement.content }}</strong>
           <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>
         </p>
       </app-server-element>
