--- a/dummy-angular/src/app/app.component.html
+++ b/dummy-angular/src/app/app.component.html
@@ -1,178 +1,7 @@
-<div id="main-container">
-  <div id="scrollContainer">
-    <div id="top">
-      <div class="topElement" *ngFor="let client of clientModel">
-        <fieldset>
-          <legend>
-            <strong>Client Information</strong>
-          </legend>
-          <mat-grid-list cols="3" rowHeight="17px">
+{{count}}
 
-            <mat-grid-tile>
-              <span class="bold right-margin-5 full-width align-right">Account Number:</span>
-            </mat-grid-tile>
+<br><br>
 
-            <mat-grid-tile [colspan]="2">
-              <span class="full-width align-left">{{client.account_number}}</span>
-            </mat-grid-tile>
-
-            <mat-grid-tile>
-              <span class="bold right-margin-5 full-width align-right">Division:</span>
-            </mat-grid-tile>
-
-            <mat-grid-tile [colspan]="2">
-              <span class="full-width align-left">{{client.division | uppercase }}</span>
-            </mat-grid-tile>
-
-            <mat-grid-tile>
-              <span class="bold right-margin-5 full-width align-right">Customer Number:</span>
-            </mat-grid-tile>
-
-            <mat-grid-tile [colspan]="2">
-              <span class="full-width align-left">{{client.customer_name | uppercase}}</span>
-            </mat-grid-tile>
-
-            <mat-grid-tile>
-              <span class="bold right-margin-5 full-width align-right">Customer Address:</span>
-            </mat-grid-tile>
-
-            <mat-grid-tile [colspan]="2">
-              <span class="full-width align-left">{{client.customer_address | uppercase }}</span>
-            </mat-grid-tile>
-
-          </mat-grid-list>
-        </fieldset>
-      </div>
-
-      <div class="topElement" *ngFor="let associate of associateModel">
-        <fieldset>
-          <legend>
-            <strong>Associate Information</strong>
-          </legend>
-          <mat-grid-list cols="3" rowHeight="17px">
-
-            <mat-grid-tile>
-              <span class="bold right-margin-5 full-width align-right">Location:</span>
-            </mat-grid-tile>
-
-            <mat-grid-tile [colspan]="2">
-              <span class="full-width align-left">{{associate.location | uppercase}}</span>
-            </mat-grid-tile>
-
-            <mat-grid-tile>
-              <span class="bold right-margin-5 full-width align-right">Department:</span>
-            </mat-grid-tile>
-
-            <mat-grid-tile [colspan]="2">
-              <span class="full-width align-left">{{associate.department | uppercase}}</span>
-            </mat-grid-tile>
-
-            <mat-grid-tile>
-              <span class="bold right-margin-5 full-width align-right">Name:</span>
-            </mat-grid-tile>
-
-            <mat-grid-tile [colspan]="2">
-              <span class="full-width align-left">{{associate.name | uppercase}}</span>
-            </mat-grid-tile>
-
-            <mat-grid-tile>
-              <span class="bold right-margin-5 full-width align-right">RACF ID:</span>
-            </mat-grid-tile>
-
-            <mat-grid-tile [colspan]="2">
-              <span class="full-width align-left">{{associate.racf_id | uppercase}}</span>
-            </mat-grid-tile>
-
-            <mat-grid-tile>
-              <span class="bold right-margin-5 full-width align-right">Supervisor Name:</span>
-            </mat-grid-tile>
-
-            <mat-grid-tile [colspan]="2">
-              <span class="full-width align-left">{{associate.supervisor_name | uppercase}}</span>
-            </mat-grid-tile>
-
-          </mat-grid-list>
-        </fieldset>
-      </div>
-    </div>
-
-    <div id="preferences">
-      <mat-card>
-        <div class="bold right-margin-5">Transactional Information:</div>
-        <div>
-          <mat-divider inset="true"></mat-divider>
-
-          <div class="topElementTransacInfo" *ngFor="let trasanctionInformation of transactionInformationModel">
-            <mat-grid-list cols="2" rowHeight="30px">
-
-              <mat-grid-tile [colspan]="1">
-                <span class="bold right-margin-5 full-width align-right">Transaction Amount:</span>
-              </mat-grid-tile>
-              <mat-grid-tile [colspan]="1">
-                <span class="full-width align-left">{{trasanctionInformation.transactionAmount}}</span>
-              </mat-grid-tile>
-
-              <mat-grid-tile [colspan]="1">
-                <span class="bold right-margin-5 full-width align-right">Dispute Amount:</span>
-              </mat-grid-tile>
-              <mat-grid-tile [colspan]="1">
-                <span class="full-width align-left">
-                  <mat-form-field>
-                    <input
-                      #disputeAmount
-                      name="disputeAmount"
-                      type="number"
-                      matInput required>
-                  </mat-form-field>
-                </span>
-              </mat-grid-tile>
-
-              <mat-grid-tile [colspan]="1">
-                <span class="bold right-margin-5 full-width align-right">Transaction Date:</span>
-              </mat-grid-tile>
-              <mat-grid-tile class="datePicker" [colspan]="1">
-                <span class="full-width align-left">
-                  <mat-form-field>
-                      <input name="date" matInput [matDatepicker]="picker" placeholder="Transaction date">
-                      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                      <mat-datepicker #picker>{{trasanctionInformation.transactionDate | date: 'longDate' }}</mat-datepicker>
-                  </mat-form-field>
-                </span>
-              </mat-grid-tile>
-              <mat-grid-tile [colspan]="1">
-                <span class="bold right-margin-5 full-width align-right">Transaction Description:</span>
-              </mat-grid-tile>
-              <mat-grid-tile [colspan]="1">
-                <span class="full-width align-left">
-                  <mat-form-field class="example-full-width" >
-                    <input matInput type="text" ngModel name="TranDescription" required>
-                  </mat-form-field>
-                </span>
-              </mat-grid-tile>
-              <mat-grid-tile>
-                <span class="bold right-margin-5 full-width align-right">What is the customer disputing today?</span>
-              </mat-grid-tile>
-              <mat-grid-tile [colspan]="1">
-                <span class="full-width align-left">
-                  <mat-form-field >
-                    <mat-select placeholder="Select a dispute reason">
-                      <mat-option *ngFor="let reason of dropDownDisputeReason" [value]="reason.value">
-                        {{reason.viewValue}}
-                      </mat-option>
-                    </mat-select>
-                  </mat-form-field>
-                </span>
-              </mat-grid-tile>
-            </mat-grid-list>
-          </div>
-        </div>
-      </mat-card>
-
-      <div class="button-holder">
-        <button mat-raised-button color="primary">OK</button>
-        <button mat-raised-button >Cancel</button>
-        <button mat-raised-button >Help</button>
-      </div>
-    </div>
-  </div>
-</div>
+<button (click)="detach()">Detach</button>
+<button (click)="reattach()">reattach</button>
+<button (click)="detect()">detect</button>
