--- a/fromAngular2Cookbook/Promises/src/app/article.component.html
+++ b/fromAngular2Cookbook/Promises/src/app/article.component.html
@@ -1,3 +1,9 @@
 <h1>Some Data</h1>
 <h3>{{title}}</h3>
 <p>{{author}}</p>
+
+<button #btn (click)="publish($event)" class="btn btn-primary">Emit Event!</button>
+<p *ngFor="let click of clicks; let i = index">
+  {{i}}: {{click}}
+</p>
+<app-login></app-login>
