--- a/AdvanceAngularConcept/src/app/app.component.html
+++ b/AdvanceAngularConcept/src/app/app.component.html
@@ -7,6 +7,7 @@
   <div class="row">
     <div class="col-xs-12">
       <button class="btn btn-success" (click)="onChangeFirst()">Change first Element</button>
+      <button class="btn btn-success" (click)="onChangeinsideBox()">Change Box Text</button>
       <button class="btn btn-danger" (click)="onDestroyFirst()">Destroy first Component</button>
       <br><br>
       <app-server-element
