--- a/dummy-angular/src/app/app.component.html
+++ b/dummy-angular/src/app/app.component.html
@@ -1,7 +1,29 @@
-{{count}}
+<!--The content below is only a placeholder and can be replaced.-->
+<div style="text-align:center">
+  <h1>
+    async-await demo in Angular
+  </h1>
+</div>
 
-<br><br>
+<h4>Promise Addition Result: {{additionPromiseResult}}</h4>
+<h4>Async Addition Result: {{additionAsyncResult}}</h4>
 
-<button (click)="detach()">Detach</button>
-<button (click)="reattach()">reattach</button>
-<button (click)="detect()">detect</button>
+<h4>Subscribe Result: {{subscribeResult | json}}</h4>
+
+<h4>Promise Result: {{promiseResult | json}}</h4>
+
+<h4>Async Result: {{asyncResult | json}}</h4>
+
+<h4>Conditional Promise Result: {{conditionalPromiseResult | json}}</h4>
+
+<h4>Conditional Async Result: {{conditionalAsyncResult | json}}</h4>
+
+<!--
+subscribeResult: Employee;
+promiseResult: Employee;
+asyncResult: Employee; -->
+
+<div><code>Promise | async </code>:
+<button (click)="iClicked()">{{ arrived ? 'Reset' : 'Resolve'}}</button>
+  <span>Wait for it... {{greeting | async}}</span>
+</div>
