--- a/AdvanceAngularConcept/src/app/app.component.html
+++ b/AdvanceAngularConcept/src/app/app.component.html
@@ -7,9 +7,9 @@
   <div class="row">
     <div class="col-xs-12">
       <button class="btn btn-success" (click)="onChangeFirst()">Change first Element</button>
-      <button class="btn btn-success" (click)="onChangeinsideBox()">Change Box Text</button>
       <button class="btn btn-danger" (click)="onDestroyFirst()">Destroy first Component</button>
       <br><br>
+
       <app-server-element
         *ngFor="let serverElement of serverElements"
         [srvElement]="serverElement"
@@ -17,7 +17,7 @@
         <p #contentParagraph>
           <strong
             *ngIf="serverElement.type === 'server'"
-            style="color: red">{{ serverElement.content }}</strong>
+            [ngStyle]="immutableStyle">{{ serverElement.content }}</strong>
           <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>
         </p>
       </app-server-element>
