--- a/form-practice/src/app/app.component.html
+++ b/form-practice/src/app/app.component.html
@@ -44,6 +44,9 @@
             name="secret">
             <option value="pet">Your first Pet?</option>
             <option value="teacher">Your first teacher?</option>
+            <option value="Mission Impossible">first Movie?</option>
+            <option value="Rai">Mother Maiden Name?</option>
+            <option value="James">Father Middle Name?</option>
           </select>
         </div>
         <div class="form-group">
