--- a/AdvanceAngularConcept/src/app/server-element/server-element.component.html
+++ b/AdvanceAngularConcept/src/app/server-element/server-element.component.html
@@ -1,5 +1,5 @@
 <div class="panel panel-default">
-  <div class="panel-heading" #heading>{{name}} -- {{count}} </div>
+  <div class="panel-heading" #heading>{{name}}</div>
   <div class="panel-body">
     <ng-content></ng-content>
   </div>
